--- a/cyber-security-services.html
+++ b/cyber-security-services.html
@@ -71,41 +71,94 @@
         <section class="section">
             <div class="container">
                 <div class="about-content"> 
-    <h2>What is Cyber Security?</h2>
-    <p>
-      Cyber security is the practice of protecting systems, networks, applications, and data from cyber threats. It ensures your business runs securely and your customer data remains safe.
-    </p>
+<h1>What is Cyber Security?</h1>
+<p>
+Cyber security is the practice of protecting your digital systems, networks, applications, and data from unauthorized access, attacks, or damage. In today’s connected world, where businesses depend heavily on technology, securing digital assets is essential to avoid financial losses, data breaches, and reputational harm. Cyber security involves using tools, techniques, policies, and skilled professionals to ensure that your information and infrastructure remain safe from cybercriminals.
+</p>
+<p>
+It covers a wide range of activities such as monitoring networks for suspicious activities, identifying vulnerabilities, testing system defenses, and responding effectively to incidents. Whether it’s securing your website, protecting sensitive customer data, or defending internal systems from external threats, cyber security is a critical part of modern business operations.
+</p>
 
-    <h2>Why is Cyber Security Important?</h2>
-    <p>Without proper security, your business risks:</p>
-    <ul>
-      <li>Data breaches and customer information leaks</li>
-      <li>Financial losses due to ransomware or fraud</li>
-      <li>Loss of trust and business reputation</li>
-      <li>Compliance violations and legal penalties</li>
-    </ul>
+<h2>Why is Cyber Security Important?</h2>
+<p>
+The importance of cyber security cannot be overstated. Every business, no matter its size or industry, faces cyber risks. Without proper security measures in place, your business could suffer from data theft, financial fraud, or operational disruptions caused by cyber attacks. 
+</p>
+<p>
+<b>Data breaches</b> can expose sensitive information such as customer details, employee records, financial data, or intellectual property. Once leaked, this data can be sold on the dark web, used for identity theft, or harm your company’s competitive advantage. Recovering from such breaches often involves costly investigations, regulatory fines, and lost business opportunities.
+</p>
+<p>
+<b>Financial losses</b> due to ransomware attacks or fraud can severely impact your bottom line. Attackers can lock your systems and demand ransom payments, or trick employees into revealing confidential information. Recovering data and restoring systems takes time and money, during which your business may experience downtime or reputation damage.
+</p>
+<p>
+In addition, cyber attacks often lead to <b>loss of trust</b> among customers, partners, and stakeholders. In today’s digital economy, trust is invaluable. Clients expect that their data is handled securely and that companies are proactive in protecting their interests. A single security incident can tarnish your brand’s reputation and cause permanent loss of customers.
+</p>
+<p>
+Furthermore, many industries are subject to strict <b>compliance regulations</b> such as GDPR, HIPAA, PCI-DSS, or ISO 27001. Non-compliance can result in hefty penalties and legal consequences. Cyber security is essential to meet these standards and avoid legal risks.
+</p>
 
-    <h2>Our Key Services</h2>
-    <ul>
-      <li><strong>Vulnerability Assessment & Penetration Testing (VAPT):</strong> Simulate real attacks to find system flaws.</li>
-      <li><strong>Web Application Testing (WAPT):</strong> Identify bugs like XSS, SQLi, and broken login systems.</li>
-      <li><strong>API Security Testing:</strong> Secure your APIs from data leaks and weak authorization.</li>
-      <li><strong>Network Penetration Testing:</strong> Check internal/external networks for misconfigurations and open ports.</li>
-      <li><strong>Security Consultation:</strong> Strategic advice tailored to your business needs.</li>
-    </ul>
+<h3>Common Cyber Threats Facing Businesses</h3>
+<p>
+To understand why cyber security matters, it’s important to be aware of the most common threats:
+</p>
+<p>
+<b>Malware:</b> Malicious software like viruses, worms, trojans, and ransomware can infiltrate your systems and cause damage or steal information.<br>
+<b>Phishing:</b> Attackers send fraudulent emails or messages to trick users into revealing passwords or clicking on harmful links.<br>
+<b>SQL Injection:</b> Hackers exploit vulnerabilities in your website or applications to manipulate databases and extract sensitive data.<br>
+<b>Cross-Site Scripting (XSS):</b> Attackers inject malicious scripts into your web pages that run on users’ browsers, stealing information or hijacking sessions.<br>
+<b>Broken Authentication:</b> Weak or poorly implemented login systems can allow attackers to gain unauthorized access.<br>
+<b>Open Ports and Misconfigurations:</b> Improperly configured network devices or open ports can serve as easy entry points for attackers.<br>
+</p>
 
-    <h2>Why Choose Us?</h2>
-    <ul>
-      <li>Experienced ethical hackers & consultants</li>
-      <li>Manual + automated testing approach</li>
-      <li>Clear reports with business-friendly language</li>
-      <li>Long-term support & remediation help</li>
-    </ul>
+<h2>Our Cyber Security Services</h2>
+<p>
+We offer a full range of professional cyber security services designed to identify, assess, and fix vulnerabilities in your IT environment. Our approach is practical, thorough, and customized to your specific needs. With our help, you can protect your business from current threats and prepare for future challenges.
+</p>
 
-    <div class="cta">
-      <p>Secure your digital future with our expert team.</p>
-      <a href="contact.html">📩 Contact Us Today</a>
-    </div>
+<h3>Vulnerability Assessment & Penetration Testing (VAPT)</h3>
+<p>
+Our Vulnerability Assessment and Penetration Testing services involve simulating real-world attacks on your systems to find weak points before attackers do. We use a mix of automated tools and manual testing to uncover security gaps, misconfigurations, and flaws. After identifying vulnerabilities, we provide detailed reports with clear remediation steps to help you strengthen your defenses.
+</p>
+
+<h3>Web Application Penetration Testing (WAPT)</h3>
+<p>
+We thoroughly test your web applications for critical security issues such as SQL injection, cross-site scripting (XSS), broken authentication, and business logic flaws. Our experts analyze the application’s design, coding practices, and configuration to ensure that no loopholes exist that could be exploited by attackers.
+</p>
+
+<h3>API Security Testing</h3>
+<p>
+APIs are essential for modern software integration but often contain hidden vulnerabilities. We assess your REST and GraphQL APIs for broken authentication, improper authorization, data exposure, and injection attacks. Our goal is to secure your APIs so that your data and services remain safe and reliable.
+</p>
+
+<h3>Network Penetration Testing</h3>
+<p>
+Your internal and external networks can have multiple entry points that hackers may exploit. Our network penetration testing evaluates your firewall rules, open ports, VPNs, routers, and switches to detect misconfigurations and vulnerabilities. This helps prevent unauthorized access and data leakage.
+</p>
+
+<h3>Security Consultation</h3>
+<p>
+We provide expert advice to improve your overall security posture. Whether you need help meeting compliance standards, designing security policies, or creating incident response plans, our consultants will guide you with practical strategies tailored to your business goals.
+</p>
+
+<h2>Why Choose Us?</h2>
+<p>
+Choosing the right cyber security partner is critical to your success. Here’s why our clients trust us:
+</p>
+<p>
+<b>Experienced Professionals:</b> Our team consists of certified ethical hackers, security analysts, and consultants with years of hands-on experience.<br>
+<b>Comprehensive Testing:</b> We combine automated scanning with manual testing to ensure no vulnerability goes unnoticed.<br>
+<b>Clear Communication:</b> Our reports are written in clear, business-friendly language so you can understand the risks and necessary fixes.<br>
+<b>Tailored Solutions:</b> We customize our services to fit your industry, technology stack, and budget.<br>
+<b>Ongoing Support:</b> Cyber security is an ongoing effort, and we provide continuous monitoring, re-testing, and advisory services.<br>
+</p>
+
+<h2>Take the First Step Towards Cyber Safety</h2>
+<p>
+Cyber threats are evolving every day, but so are the techniques to combat them. Don’t wait for a breach to disrupt your business. Take proactive steps now to secure your systems, protect your customers, and comply with regulations. Our team is here to help you build a resilient defense.
+</p>
+<p>
+<b>Contact us</b> today to schedule a consultation or learn more about how we can safeguard your digital assets. Together, we can make your business safer and more secure in the digital age.
+</p>
+
 
                     
                 </div>
