--- a/security-consultation.html
+++ b/security-consultation.html
@@ -61,8 +61,9 @@
         <section class="hero hero-small">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">cyber-security-services.html</h1>
-                    <p class="hero-subtitle">cyber-security-services.html</p>
+<h2>Security Consultation</h2>
+<p><i>Guiding your business to stronger defenses with expert advice and tailored cyber security strategies.</i></p>
+
                 </div>
             </div>
         </section>
@@ -70,21 +71,99 @@
         <section class="section">
             <div class="container">
                 <div class="about-content">
-                    Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
+<h1>Security Consultation Services</h1>
+
+<p>
+In today’s fast-paced digital world, protecting your business from cyber threats is more important than ever. Security consultation services help organizations understand their unique security challenges and develop tailored strategies to mitigate risks. Our expert consultants work closely with your team to assess your current security posture, identify gaps, and design effective solutions that align with your business goals.
+</p>
+
+<h2>What is Security Consultation?</h2>
+
+<p>
+Security consultation involves a thorough evaluation of your organization’s cybersecurity practices, policies, and technologies. It is a collaborative process where experienced professionals analyze your IT environment and provide actionable recommendations to enhance your defenses. Whether you are a small business or a large enterprise, security consultation can help you build a strong foundation for protecting your critical assets.
+</p>
+
+<p>
+Consulting services cover a wide range of areas including risk management, compliance, incident response planning, employee training, and technology implementation. The goal is to develop a customized roadmap that improves your overall security posture while supporting your operational needs.
+</p>
+
+<h2>Why Your Business Needs Security Consultation</h2>
+
+<p>
+Cyber threats are constantly evolving, and without proper guidance, businesses can struggle to keep pace. Many organizations face challenges such as inadequate security policies, outdated technologies, insufficient staff training, and lack of compliance with industry regulations. Security consultation helps bridge these gaps by providing expert advice and practical solutions.
+</p>
+
+<p>
+By investing in security consultation, you can:</p>
+
+<p>
+<b>Identify vulnerabilities:</b> Understand weaknesses in your systems, networks, and processes before attackers find them.<br>
+<b>Improve compliance:</b> Meet regulatory requirements such as GDPR, HIPAA, PCI-DSS, and others, avoiding costly fines.<br>
+<b>Enhance incident response:</b> Develop effective plans to quickly detect, respond to, and recover from security incidents.<br>
+<b>Reduce risk:</b> Implement best practices and controls to minimize the chance of data breaches and operational disruptions.<br>
+<b>Educate your team:</b> Train employees on security awareness to reduce human error, one of the leading causes of breaches.<br>
+</p>
+
+<h3>Our Security Consultation Approach</h3>
+
+<p>
+We believe that every business is unique, and a one-size-fits-all approach to security simply doesn’t work. Our consultation process begins with a comprehensive assessment of your current security environment. This includes reviewing your infrastructure, policies, applications, and workforce practices.
+</p>
+
+<p>
+Based on this assessment, we work with you to prioritize risks and develop a strategic plan that addresses the most critical areas first. Our consultants provide clear, actionable recommendations and assist in implementing changes that strengthen your security.
+</p>
+
+<p>
+Throughout the engagement, we maintain open communication and transparency to ensure your team understands every step of the process. Our goal is to empower your organization with the knowledge and tools needed to maintain a robust security posture long after the consultation is complete.
+</p>
+
+<h2>Key Areas of Focus</h2>
+
+<p>
+Our security consultation services cover a wide range of critical areas including:
+</p>
+
+<p>
+<b>Risk Management:</b> Identify and assess risks across your organization and implement controls to mitigate them.<br>
+<b>Compliance Advisory:</b> Help you understand and meet legal and industry-specific security standards.<br>
+<b>Security Policies & Procedures:</b> Develop or improve policies that govern access controls, data protection, and acceptable use.<br>
+<b>Incident Response Planning:</b> Create detailed plans for detecting, responding to, and recovering from cyber incidents.<br>
+<b>Employee Training:</b> Design customized training programs to raise awareness and promote security best practices.<br>
+<b>Technology Assessment:</b> Evaluate security tools and solutions to ensure they meet your needs effectively.<br>
+</p>
+
+<h2>Benefits of Partnering with Us</h2>
+
+<p>
+Choosing our security consultation services gives you access to industry experts with extensive experience in cyber defense. We combine deep technical knowledge with practical business insight to deliver solutions that not only protect but also enable your growth.
+</p>
+
+<p>
+You will benefit from:
+</p>
+
+<p>
+<b>Tailored strategies:</b> Security plans customized to your industry, size, and risk profile.<br>
+<b>Proactive risk reduction:</b> Identifying threats before they become incidents.<br>
+<b>Regulatory compliance:</b> Avoiding fines and legal complications through proper governance.<br>
+<b>Enhanced resilience:</b> Better preparation and faster recovery from cyber events.<br>
+<b>Cost savings:</b> Reducing the financial impact of security incidents and inefficient controls.<br>
+</p>
+
+<h2>Get Started with Our Security Consultation Today</h2>
+
+<p>
+Don’t wait until a breach disrupts your business. Take proactive steps to protect your valuable data and maintain customer trust. Our expert consultants are ready to guide you through every stage of improving your security posture.
+</p>
+
+<p>
+<b>Contact us</b> now to schedule a consultation or request a security assessment. Together, we can build a safer digital environment for your business.
+</p>
+
                     
                 </div>
-                                <div class="about-content">
-                    Hi — I’m <b>Mrutunjaya Senapati</b>
-                </div>
+
             </div>
         </section>
 
