--- a/vapt-wapt.html
+++ b/vapt-wapt.html
@@ -61,8 +61,9 @@
         <section class="hero hero-small">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">cyber-security-services.html</h1>
-                    <p class="hero-subtitle">cyber-security-services.html</p>
+<h2>VAPT & WAPT</h2>
+<p><i>Simulating real-world cyber attacks to uncover, assess, and fix vulnerabilities in systems and web applications.</i></p>
+
                 </div>
             </div>
         </section>
@@ -70,20 +71,114 @@
         <section class="section">
             <div class="container">
                 <div class="about-content">
-                    Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
+
+                    <h1>VAPT & WAPT Services</h1>
+
+<p>
+Cyber threats are growing in both volume and sophistication. Businesses of all sizes are increasingly targeted by attackers who look for weak spots in digital systems. Vulnerability Assessment and Penetration Testing (VAPT), along with Web Application Penetration Testing (WAPT), are essential services that help identify and fix security flaws before they can be exploited. These services simulate real-world attacks to test how well your systems, networks, and web applications can withstand cyber threats.
+</p>
+
+<h2>What is VAPT?</h2>
+
+<p>
+Vulnerability Assessment and Penetration Testing (VAPT) is a two-step security process designed to evaluate the resilience of your IT systems. The first phase — Vulnerability Assessment — focuses on identifying known vulnerabilities in your systems, applications, servers, and networks. This is typically done using automated tools that scan for outdated software, missing patches, insecure configurations, and other weaknesses.
+</p>
+
+<p>
+The second phase — Penetration Testing — is a manual and more in-depth approach. Security experts attempt to exploit the vulnerabilities discovered during the assessment to see how far an attacker could go. This helps determine the real-world risk to your organization. Penetration testing uncovers hidden weaknesses that automated tools may miss, especially those related to logic flaws, misconfigurations, or complex chained attacks.
+</p>
+
+<h2>What is WAPT?</h2>
+
+<p>
+Web Application Penetration Testing (WAPT) is a focused security testing service that targets web-based applications, such as websites, portals, CRMs, dashboards, e-commerce stores, and APIs. In today’s digital world, web apps are often the main entry points for attackers because they are publicly accessible and frequently updated.
+</p>
+
+<p>
+WAPT involves a detailed manual examination of your application to uncover vulnerabilities like SQL Injection, Cross-Site Scripting (XSS), Cross-Site Request Forgery (CSRF), authentication flaws, session hijacking, insecure file uploads, and many more. It not only identifies coding flaws but also inspects how securely your app handles user input, session data, and interactions with databases and APIs.
+</p>
+
+<h2>Why VAPT and WAPT Are Critical</h2>
+
+<p>
+With the increasing reliance on technology, companies are exposed to multiple attack surfaces. If a system or application is not properly secured, it could allow attackers to steal data, disrupt services, or gain control over systems. Cybercriminals use sophisticated techniques to find and exploit even the smallest weaknesses. That's why a proactive approach is necessary.
+</p>
+
+<p>
+VAPT and WAPT simulate these attacks in a safe and controlled environment, providing a clear understanding of how your current defenses perform. These tests go beyond basic scans — they mimic real hackers' tactics and show what kind of damage could be done if an actual attack occurred. More importantly, they help your business fix these weaknesses before someone malicious can take advantage.
+</p>
+
+<h2>Our Testing Methodology</h2>
+
+<p>
+We follow a structured and proven testing methodology based on industry standards such as OWASP Top 10, SANS 25, and MITRE ATT&CK. Our process is designed to be thorough, safe, and effective without disrupting your operations.
+</p>
+
+<p>
+We begin with a detailed information-gathering phase where we map your systems, services, and web apps. Next, we conduct automated scans using leading vulnerability scanning tools. This is followed by manual testing to validate findings and uncover complex security flaws that tools cannot detect.
+</p>
+
+<p>
+Once testing is complete, we prepare a detailed report that includes a summary of findings, risk ratings, screenshots of proof-of-concept exploits, and most importantly, remediation steps. This report is written in clear, non-technical language for management, and also includes technical details for developers and IT teams.
+</p>
+
+<h2>What We Test</h2>
+
+<p>
+For VAPT, we cover operating systems, servers, databases, internal networks, external IPs, endpoints, and infrastructure components. We assess patch levels, firewall rules, port configurations, file sharing protocols, access permissions, and more.
+</p>
+
+<p>
+For WAPT, we analyze your web apps for flaws in business logic, input validation, authentication mechanisms, session management, API calls, third-party plugins, and browser-side security. We ensure that both front-end and back-end components are tested thoroughly.
+</p>
+
+<h2>Benefits of Our VAPT & WAPT Services</h2>
+
+<p>
+Our services provide deep insight into your security posture. By identifying real vulnerabilities, we help your organization avoid data breaches, regulatory penalties, and business disruptions. Our approach not only highlights what is wrong but guides you step-by-step on how to fix it.
+</p>
+
+<p>
+We help improve your compliance with security standards such as ISO 27001, PCI-DSS, GDPR, HIPAA, and others. Regular VAPT and WAPT are often required to demonstrate that your organization takes data protection seriously and follows best practices.
+</p>
+
+<h2>Why Choose Us?</h2>
+
+<p>
+Our team of ethical hackers and cyber security specialists bring years of experience across industries. We understand that every business is unique, so we customize our testing approach to your technology stack, business model, and regulatory requirements.
+</p>
+
+<p>
+We don’t just run tools and send you a generic report. Our testers manually validate every finding and give you clear, actionable advice. We walk with you through the remediation process, answering questions and verifying that fixes are correctly applied.
+</p>
+
+<p>
+We also offer re-testing after remediation is completed, so you can be confident that vulnerabilities have been fully resolved. Our long-term goal is to help you build a secure digital environment, improve development practices, and reduce cyber risk across your organization.
+</p>
+
+<h2>Who Should Use VAPT & WAPT?</h2>
+
+<p>
+Whether you are a startup or an enterprise, if your business relies on digital systems or web applications, you need regular security testing. This is especially important if you handle sensitive data such as personal information, payment details, or confidential business data. Companies launching new applications, migrating infrastructure, or going through digital transformation should also prioritize testing.
+</p>
+
+<p>
+VAPT & WAPT services are critical for SaaS providers, e-commerce platforms, healthcare institutions, financial services, government systems, and educational platforms. No matter your size or sector, testing helps you understand your weaknesses and build a stronger defense.
+</p>
+
+<h2>Take the First Step to Secure Your Business</h2>
+
+<p>
+Cybersecurity is not a one-time task — it's an ongoing responsibility. VAPT and WAPT services are essential tools in your defense strategy. They help you uncover hidden vulnerabilities, understand your risks, and take corrective actions to protect your business.
+</p>
+
+<p>
+Don’t wait for an attack to happen. Take control of your cyber security today. Our team is ready to guide you through every step of the process. Reach out to us now to schedule a consultation or request a sample report.
+</p>
+
+<p><b>Your systems are only as strong as your weakest link. Let us help you strengthen them.</b></p>
+
                     
-                </div>
-                                <div class="about-content">
-                    Hi — I’m <b>Mrutunjaya Senapati</b>
                 </div>
             </div>
         </section>
