--- a/api-security-testing.html
+++ b/api-security-testing.html
@@ -61,8 +61,9 @@
         <section class="hero hero-small">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">cyber-security-services.html</h1>
-                    <p class="hero-subtitle">cyber-security-services.html</p>
+<h2>API Security Testing</h2>
+<p><i>Securing your REST and GraphQL APIs from unauthorized access, data leaks, and broken authentication risks.</i></p>
+
                 </div>
             </div>
         </section>
@@ -70,20 +71,96 @@
         <section class="section">
             <div class="container">
                 <div class="about-content">
-                    Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
+
+
+                    <h1>API Security Testing Services</h1>
+
+<p>
+In today’s fast-paced digital world, APIs (Application Programming Interfaces) serve as the backbone of modern applications. From mobile apps and web platforms to third-party integrations and microservices, APIs allow systems to exchange data and perform critical functions. However, without proper security, APIs can become vulnerable entry points for attackers. API Security Testing ensures that your APIs are protected from data leaks, unauthorized access, and other threats that could compromise your business.
+</p>
+
+<h1>What is API Security Testing?</h1>
+
+<p>
+API Security Testing is the process of evaluating APIs to identify vulnerabilities, misconfigurations, and weaknesses that could be exploited by attackers. These vulnerabilities might include broken authentication, insufficient authorization, exposed sensitive data, improper error handling, and insecure communication protocols. Security testing simulates real-world attacks on your API endpoints to reveal these risks before a malicious actor finds them.
+</p>
+
+<p>
+Our testing focuses on REST APIs, GraphQL APIs, and other API types commonly used across web and mobile platforms. We ensure your API securely handles user input, authentication tokens, session data, and integration logic.
+</p>
+
+<h1>Why API Security is Critical</h1>
+
+<p>
+APIs directly interact with sensitive backend systems and databases. A single vulnerability can lead to massive data breaches, service disruptions, or unauthorized operations. Since APIs often bypass traditional web interfaces, they can be overlooked in routine security audits. Attackers are increasingly targeting APIs as the soft underbelly of enterprise systems. That's why API security is no longer optional — it's essential.
+</p>
+
+<p>
+Modern businesses rely on APIs to automate tasks, integrate services, and power applications. If these APIs are not tested regularly, they can become a serious liability. Security testing helps your business stay one step ahead of attackers by identifying and remediating risks proactively.
+</p>
+
+<h1>Common API Vulnerabilities We Test</h1>
+
+<p>
+We test your APIs against the OWASP API Security Top 10 vulnerabilities, which include issues like:
+Broken Object Level Authorization<br>
+Broken Authentication and Token Mismanagement<br>
+Excessive Data Exposure<br>
+Lack of Rate Limiting<br>
+Injection Attacks such as SQL or Command Injection<br>
+Improper Error Handling and Logging<br>
+Security Misconfigurations in Headers or CORS policies
+</p>
+
+<h1>How We Conduct API Security Testing</h1>
+
+<p>
+Our testing begins with understanding your API structure, endpoints, and authentication mechanisms. We map out the API’s surface and explore how different users — authenticated or anonymous — interact with each function. Automated tools help us detect standard issues, but our core strength lies in manual testing, where our experts simulate real attacker behaviors.
+</p>
+
+<p>
+We intercept and manipulate API requests and responses using tools like Burp Suite, Postman, and custom scripts. We test for IDOR (Insecure Direct Object References), privilege escalation, token forgery, and other logic flaws. Our goal is to identify both technical vulnerabilities and design-level issues.
+</p>
+
+<h1>What We Deliver</h1>
+
+<p>
+After completing the test, we prepare a detailed report that includes:
+An executive summary highlighting the risk exposure<br>
+Technical breakdown of each vulnerability discovered<br>
+Proof-of-concept showing how an attacker could exploit the issue<br>
+Clear, actionable remediation guidance<br>
+Retesting support once fixes are implemented
+</p>
+
+<h1>Benefits of API Security Testing</h1>
+
+<p>
+API Security Testing gives your business peace of mind by ensuring secure data exchange between services. It prevents data breaches, protects customer information, and builds user trust. It also helps you stay compliant with regulations like GDPR, HIPAA, and PCI-DSS. Regular testing reduces long-term risk and strengthens your overall cyber defense.
+</p>
+
+<p>
+As APIs grow in number and complexity, automated security tools alone are not enough. Our manual, expert-led testing approach uncovers deep-rooted issues that can remain hidden in automation. We don’t just scan — we actively probe and simulate how a real attacker would exploit your API.
+</p>
+
+<h1>Why Choose Us?</h1>
+
+<p>
+Our team includes certified penetration testers, ethical hackers, and security engineers with hands-on experience across industries. We specialize in API security, understanding the latest attack trends and how to defend against them. We offer:
+A personalized testing approach for your unique API<br>
+Business-friendly reports written in plain language<br>
+Collaboration with developers to close vulnerabilities<br>
+Post-remediation verification for complete security
+</p>
+
+<h1>Secure Your APIs Today</h1>
+
+<p>
+Your APIs are vital to your business operations. Don’t let them become a security risk. Our API Security Testing service is designed to safeguard your digital assets and protect customer data. Contact us today to schedule an API assessment or speak with one of our security consultants.
+</p>
+
+
                     
-                </div>
-                                <div class="about-content">
-                    Hi — I’m <b>Mrutunjaya Senapati</b>
                 </div>
             </div>
         </section>
