--- a/network-penetration-testing.html
+++ b/network-penetration-testing.html
@@ -61,8 +61,9 @@
         <section class="hero hero-small">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">cyber-security-services.html</h1>
-                    <p class="hero-subtitle">cyber-security-services.html</p>
+<h2>Network Penetration Testing</h2>
+<p><i>Identifying open ports, misconfigurations, and internal or external threats within your network infrastructure.</i></p>
+
                 </div>
             </div>
         </section>
@@ -70,20 +71,98 @@
         <section class="section">
             <div class="container">
                 <div class="about-content">
-                    Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
-                        Hi — I’m <b>Mrutunjaya Senapati</b>
+<h1>Network Penetration Testing Services</h1>
+
+<p>
+Your network is the digital gateway to your organization’s critical data and systems. It connects users, applications, servers, and infrastructure — but it can also expose your business to cyber threats if not properly secured. Network Penetration Testing identifies weak points in your internal or external network before attackers do, helping you patch vulnerabilities, strengthen defenses, and reduce risk.
+</p>
+
+<h1>What is Network Penetration Testing?</h1>
+
+<p>
+Network Penetration Testing is a simulated attack on your network environment to identify and assess exploitable security flaws. These flaws might include open ports, outdated protocols, weak credentials, unpatched services, or misconfigured firewalls. The goal is to determine how an attacker could gain access to your network, move laterally across systems, and escalate privileges.
+</p>
+
+<p>
+Our test mimics real-world attack techniques to evaluate how well your network security holds up under threat. We test both internal networks (used by staff or connected devices) and external networks (public-facing systems like websites, servers, and email gateways).
+</p>
+
+<h1>Why Network Security is Important</h1>
+
+<p>
+Most cyberattacks begin with scanning your network. If attackers find unprotected ports, vulnerable services, or weak authentication, they can break into your systems, steal data, or deploy ransomware. Even one misconfigured device could give hackers the entry they need.
+</p>
+
+<p>
+Network penetration testing helps your business identify and close these entry points before attackers do. It’s one of the most effective ways to uncover hidden risks and ensure your infrastructure meets security best practices.
+</p>
+
+<h1>Our Testing Methodology</h1>
+
+<p>
+Our approach follows proven frameworks such as PTES (Penetration Testing Execution Standard) and the MITRE ATT&CK model. First, we gather intelligence about your network structure, IP addresses, subnets, and connected systems. Then, we scan for vulnerabilities using both commercial and open-source tools.
+</p>
+
+<p>
+Next, our penetration testers manually explore discovered vulnerabilities to determine their impact. We attempt to exploit weaknesses safely and ethically to demonstrate how an attacker could break in. Common tests include password attacks, protocol tampering, man-in-the-middle attacks, and pivoting between systems.
+</p>
+
+<h1>What We Look For</h1>
+
+<p>
+During the test, we assess:
+Open and unfiltered ports<br>
+Outdated or vulnerable software<br>
+Default or weak credentials<br>
+Firewall and VPN configuration flaws<br>
+Poor segmentation between internal networks<br>
+Unsecured services such as SMB, RDP, or Telnet<br>
+Sensitive data exposure through insecure channels
+</p>
+
+<h1>Types of Network Penetration Testing</h1>
+
+<p>
+We offer multiple types of network tests depending on your needs:
+External Network Testing focuses on systems exposed to the internet, such as web servers and email gateways.<br>
+Internal Network Testing simulates an attacker inside the network — for example, a rogue employee or someone who gained access through phishing.<br>
+Wireless Network Testing evaluates the security of Wi-Fi infrastructure, including encryption, authentication, and segmentation.<br>
+Cloud Network Testing assesses cloud environments like AWS, Azure, or GCP for misconfigurations and access control flaws.
+</p>
+
+<h1>What You Receive</h1>
+
+<p>
+At the end of the assessment, we provide a detailed report containing:
+An overview of discovered vulnerabilities<br>
+Risk levels and severity ratings<br>
+Technical evidence and exploitation methods<br>
+Clear recommendations for remediation<br>
+Verification support after fixes are applied
+</p>
+
+<h1>Benefits of Network Penetration Testing</h1>
+
+<p>
+Our testing gives you real insight into how an attacker might view your network. You get a clear understanding of where your defenses are strong — and where they need work. Regular network testing helps prevent costly breaches, protects sensitive data, and supports compliance with regulations like ISO 27001, GDPR, HIPAA, and others.
+</p>
+
+<h1>Why Choose Us?</h1>
+
+<p>
+We are a team of certified ethical hackers and penetration testers with years of hands-on experience across industries. Our testing is conducted manually, with care, and tailored to your unique network environment. We focus on quality over quantity and go beyond automated scans to deliver meaningful results.
+</p>
+
+<p>
+You’ll receive easy-to-understand reports, personalized guidance, and support throughout the remediation process. Our clients trust us for being responsive, transparent, and deeply technical.
+</p>
+
+<h1>Secure Your Network Now</h1>
+
+<p>
+Your network is your first line of defense. Don’t wait for a breach to find out where it’s vulnerable.
+
                     
-                </div>
-                                <div class="about-content">
-                    Hi — I’m <b>Mrutunjaya Senapati</b>
                 </div>
             </div>
         </section>
