--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           and bug bounty hunting, I help organizations strengthen their defenses and stay fully secure and compliant.
         </p>
         <div class="hero-cta">
-          <a href="Contact.html" class="btn btn-primary">Get In Touch</a>
+          <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
           <a href="#services" class="btn btn-secondary">View Services</a>
         </div>
       </div>
@@ -88,7 +88,7 @@
         <p>I’ve submitted over <b>200+</b> bug-bounty reports and build tools like <b>Path Traversal</b> &
           <b>XSS_Finder</b> to speed testing.
         </p>
-        <p>Need a quick security check or full audit? <a href="#contact">Get in touch</a>.</p>
+        <p> <a href="About.html">About me</a>.</p>
       </div>
     </div>
   </section>
@@ -105,59 +105,48 @@
       reports, I combine real-world attack knowledge with custom tools to ensure thorough, actionable, and professional
       security solutions.
       <div class="services-grid">
+    <a href="cyber-security-services.html" class="service-card-link">
         <div class="service-card">
-          <div class="service-icon">🔒</div>
-          <h3>Vulnerability Assessment & Penetration Testing (VAPT)</h3>
-          <p>Identify, exploit, and fix real-world vulnerabilities in your systems through professional assessment and
-            manual penetration testing.</p>
+            <div class="service-icon">🔒</div>
+            <h3>Cyber Security Services</h3>
+            <p>Comprehensive protection for systems, applications, APIs, and networks using industry standards and expert manual testing.</p>
         </div>
+    </a>
+    <a href="security-consultation.html" class="service-card-link">
         <div class="service-card">
-          <div class="service-icon">💻</div>
-          <h3>Web Application Penetration Testing (WAPT)</h3>
-          <p>Comprehensive web app testing for XSS, SQLi, authentication flaws, and configuration weaknesses to ensure
-            complete application security.</p>
+            <div class="service-icon">📋</div>
+            <h3>Security Consultation</h3>
+            <p>Get expert advice to strengthen your security posture, meet compliance, and plan effective cyber defense strategies.</p>
         </div>
+    </a>
+    <a href="vulnerability-assessment-remediation.html" class="service-card-link">
         <div class="service-card">
-          <div class="service-icon">🔌</div>
-          <h3>API Security Testing</h3>
-          <p>Secure your REST and GraphQL APIs against broken authentication, improper authorization, and data exposure
-            vulnerabilities.</p>
+            <div class="service-icon">🛡️</div>
+            <h3>Vulnerability Assessment & Remediation</h3>
+            <p>Find and fix vulnerabilities through scans, manual testing, and clear remediation guidance.</p>
         </div>
+    </a>
+    <a href="vapt-wapt.html" class="service-card-link">
         <div class="service-card">
-          <div class="service-icon">🌐</div>
-          <h3>Network Penetration Testing</h3>
-          <p>Evaluate your network for open ports, misconfigurations, and exploitable weaknesses to strengthen internal
-            and external security.</p>
+            <div class="service-icon">💻</div>
+            <h3>VAPT & WAPT</h3>
+            <p>Simulate real-world attacks on systems and web apps to uncover and patch critical security weaknesses effectively.</p>
         </div>
+    </a>
+    <a href="api-security-testing.html" class="service-card-link">
         <div class="service-card">
-          <div class="service-icon">🛡️</div>
-          <h3>Vulnerability Assessment & Remediation</h3>
-          <p>Detailed scanning and manual validation with a clear remediation plan to patch vulnerabilities before they
-            become exploitable.</p>
+            <div class="service-icon">🔌</div>
+            <h3>API Security Testing</h3>
+            <p>Test REST and GraphQL APIs for broken authentication, data leaks, and authorization flaws using secure methods.</p>
         </div>
+    </a>
+    <a href="network-penetration-testing.html" class="service-card-link">
         <div class="service-card">
-          <div class="service-icon">📋</div>
-          <h3>Security Consultation</h3>
-          <p>Expert consulting for strengthening your security posture, improving compliance, and building a robust
-            defense strategy.</p>
+            <div class="service-icon">🌐</div>
+            <h3>Network Penetration Testing</h3>
+            <p>Assess internal and external networks for exposed ports, misconfigurations, and exploitable security loopholes and risks.</p>
         </div>
-        <div class="service-card">
-          <div class="service-icon">🕵️‍♂️</div>
-          <h3>Digital Forensics</h3>
-          <p>Assistance in evidence collection, malware analysis, and forensic investigation for incident response and
-            law enforcement cases.</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">🎨</div>
-          <h3>Web Design & Development</h3>
-          <p>Professional website design and development with a focus on security, performance, and clean modern UI.</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">📡</div>
-          <h3>Network Configuration</h3>
-          <p>Setup and configuration of secure networks, firewalls, routers, and VPNs to ensure strong protection and
-            smooth connectivity.</p>
-        </div>
+    </a>
       </div>
     </div>
   </section>
