--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
         </div>
     </a>
       </div>
+                <div class="hero-cta">
+          <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
+          <a href="#services" class="btn btn-secondary">View Services</a>
+        </div>
     </div>
   </section>
 
