--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
 
   gtag('config', 'G-RF2RC1S7PV');
 </script>
+        <style>
+        .service-card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+    </style>
 </head>
 
     
