--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
   <section id="services" class="section section-dark">
     <div class="container">
       <h2 class="section-title">Services</h2>
-      I provide comprehensive <b>cybersecurity services</b> to protect businesses and digital assets from modern
+      <!-- I provide comprehensive <b>cybersecurity services</b> to protect businesses and digital assets from modern
       threats. My expertise includes <b>VAPT</b>, <b>WAPT</b>, <b>API Security Testing</b>, <b>Network Testing</b>, and
       <b>Vulnerability Assessment & Remediation</b>. I also offer <b>Security Consultation</b> for strategic guidance,
       and <b>Digital Forensics</b> for evidence analysis and incident investigations. Additionally, I deliver secure
       <b>Web Design & Development</b> and reliable <b>Network Configuration</b>. With hands-on experience in
       <b>Bugcrowd</b>, <b>HackerOne</b>, <b>Intigriti</b>, and <b>Open Bug Bounty</b>, having submitted over <b>200+</b>
       reports, I combine real-world attack knowledge with custom tools to ensure thorough, actionable, and professional
-      security solutions.
+      security solutions. -->
       <div class="services-grid">
     <a href="cyber-security-services.html" class="service-card-link">
         <div class="service-card">
@@ -155,11 +155,11 @@
         </div>
     </a>
       </div>
-                <div class="hero-cta">
+    </div>
+                      <div class="hero-cta">
           <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
           <a href="#services" class="btn btn-secondary">View Services</a>
         </div>
-    </div>
   </section>
 
   <section id="tools" class="section section-dark">
