--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </div>
                       <div class="hero-cta">
           <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
-          <a href="#services" class="btn btn-secondary">View Services</a>
+          <a href="Services.html" class="btn btn-secondary">View Services</a>
         </div>
   </section>
 
