--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
 
   <section id="services" class="section section-dark">
     <div class="container">
-      <h2 class="section-title">Services</h2>
+                                              <div class="hero-cta">
+          <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
+          <a href="Services.html" class="btn btn-secondary"><h2 class="section-title">Services</h2></a>
+        </div>
+      <!-- <h2 class="section-title">Services</h2> -->
       <!-- I provide comprehensive <b>cybersecurity services</b> to protect businesses and digital assets from modern
       threats. My expertise includes <b>VAPT</b>, <b>WAPT</b>, <b>API Security Testing</b>, <b>Network Testing</b>, and
       <b>Vulnerability Assessment & Remediation</b>. I also offer <b>Security Consultation</b> for strategic guidance,
@@ -159,10 +163,7 @@
 
 
   </section>
-                                      <div class="hero-cta">
-          <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
-          <a href="Services.html" class="btn btn-secondary">View Services</a>
-        </div>
+
 
   <section id="tools" class="section section-dark">
     <div class="container">
