--- a/index.html
+++ b/index.html
@@ -103,12 +103,9 @@
   <section id="services" class="section section-dark">
     <div class="container">
         <h3 class="section-title">
-                                              <div class="hero-cta">
-          <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
-          <a href="Services.html" class="btn btn-secondary">Services</a>
-        </div>
+           Services
             </h3>
-      <!-- <h2 class="section-title">Services</h2> -->
+      <h2 class="section-title">Services</h2>
       <!-- I provide comprehensive <b>cybersecurity services</b> to protect businesses and digital assets from modern
       threats. My expertise includes <b>VAPT</b>, <b>WAPT</b>, <b>API Security Testing</b>, <b>Network Testing</b>, and
       <b>Vulnerability Assessment & Remediation</b>. I also offer <b>Security Consultation</b> for strategic guidance,
@@ -166,6 +163,10 @@
 
   </section>
 
+                                                  <div class="hero-cta">
+          <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
+          <a href="Services.html" class="btn btn-secondary">check out all Services</a>
+        </div>
 
   <section id="tools" class="section section-dark">
     <div class="container">
