--- a/index.html
+++ b/index.html
@@ -160,11 +160,16 @@
 
   </section>
 
+    
+      <section id="tools" class="section section-dark">
+
                                                   <div class="hero-cta">
           <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
           <a href="Services.html" class="btn btn-secondary">check out all Services</a>
         </div>
+  </section>
 
+    
   <section id="tools" class="section section-dark">
     <div class="container">
       <h2 class="section-title">Security Tools</h2>
