--- a/index.html
+++ b/index.html
@@ -297,8 +297,13 @@
       </div>
     </div>
   </section>
-
-
+    
+  <section id="blog" class="section">
+                                                  <div class="hero-cta">
+          <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
+          <a href="Services.html" class="btn btn-secondary">check out all Services</a>
+        </div>
+        </section>
 
   <section id="projects" class="section section-dark">
     <div class="container">
