--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
                                                   <div class="hero-cta">
           <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
-          <a href="Services.html" class="btn btn-secondary">check out all Services</a>
+          <a href="Services.html" class="btn btn-secondary">check out all Services.</a>
         </div>
   </section>
 
@@ -301,7 +301,7 @@
   <section id="blog" class="section">
                                                   <div class="hero-cta">
           <!-- <a href="Contact.html" class="btn btn-primary">Get In Touch</a> -->
-          <a href="Services.html" class="btn btn-secondary">check out all Services</a>
+          <a href="Services.html" class="btn btn-secondary">check out all Blogs.</a>
         </div>
         </section>
 
