--- a/Contact.html
+++ b/Contact.html
@@ -649,7 +649,7 @@
         <!-- start -->
         <form action="https://formspree.io/f/xwpranaq" class="fs-form fs-layout__2-column" target="_top" method="POST">
           <div class="fs-field">
-            <label class="bapi" for="business-area">Business Area</label>
+         <!--    <label class="bapi" for="business-area">Business Area</label>
             <select class="fs-select" id="business-area" name="business-area" required>
                 <option value="">-- Select Business Area --</option>
               <option value="security-consulting">Security Consulting</option>
@@ -684,7 +684,7 @@
               <option value="general-inquiry">General Inquiry</option>
               <option value="other">Other (please specify)</option>
             </select>
-          </div>
+          </div> -->
           <div class="fs-field">
             <label class="bapi" for="title">Title</label>
             <select class="fs-select" id="title" name="title" required>
@@ -927,6 +927,7 @@
 </body>
 
 </html>
+
 
 
 
